--- a/HM23.4IS.html
+++ b/HM23.4IS.html
@@ -23,7 +23,7 @@ November 28, 2025-->
     </div>
 
     <br><br>
-    <img src="file:///Users/austin21/Desktop/B167.JPG" height="150" alt="Austin Birchall Professional Image">
+    <img src="images/B167.JPG" height="150" alt="Austin Birchall Professional Image">
     <h4>Austin Birchall</h4>
 
     Life Insurance Agent <br>
