--- a/HM23.4IS.html
+++ b/HM23.4IS.html
@@ -13,9 +13,14 @@ November 28, 2025-->
 
     <!-- LEFT VALUE: Education, Experience, Skills Links -->
     <div class="leftvalue">
-        <a href="index.html">Home</a> |
-        <a href="#">Resume</a>
-        <a href="aboutme.html">About Me</a>
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="resume.html">Resume</a> |
+    <a href="aboutme.html">About Me</a> |
+    <a href="bootstrap.html">Bootstrap Page</a> |
+    <a href="scratch.html">Scratch Page</a> |
+    <a href="webapp.html">Web App</a>
+</nav>
 
         <a href="#edu">Education</a><br>
         <a href="#exp">Experience</a><br>
