--- a/aboutme.html
+++ b/aboutme.html
@@ -41,9 +41,14 @@
 <body>
 
 <nav>
+<nav>
     <a href="index.html">Home</a> |
     <a href="resume.html">Resume</a> |
-    <a href="aboutme.html">About Me</a>
+    <a href="aboutme.html">About Me</a> |
+    <a href="bootstrap.html">Bootstrap Page</a> |
+    <a href="scratch.html">Scratch Page</a> |
+    <a href="webapp.html">Web App</a>
+</nav>
 </nav>
 
 <header>
