--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="resume.html">Resume</a> |
-        <a href="aboutme.html">About Me</a>
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="resume.html">Resume</a> |
+    <a href="aboutme.html">About Me</a> |
+    <a href="bootstrap.html">Bootstrap Page</a> |
+    <a href="scratch.html">Scratch Page</a> |
+    <a href="webapp.html">Web App</a>
+</nav>
     </nav>
 
     <h1>Welcome to My Website</h1>
