--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,14 @@
 <body id="top">
 
 <nav>
+<nav>
     <a href="index.html">Home</a> |
     <a href="resume.html">Resume</a> |
-    <a href="aboutme.html">About Me</a>
+    <a href="aboutme.html">About Me</a> |
+    <a href="bootstrap.html">Bootstrap Page</a> |
+    <a href="scratch.html">Scratch Page</a> |
+    <a href="webapp.html">Web App</a>
+</nav>
 </nav>
 
 <div class="leftvalue">
