--- a/resume.html
+++ b/resume.html
@@ -4,11 +4,164 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Résumé - Austin Birchall</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Inline styles just for this page to keep it clean and black/white -->
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+            background: #f5f5f5;
+            color: #111;
+        }
+
+        nav {
+            background: #000;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+            font-size: 0.95rem;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 8px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .page-wrapper {
+            max-width: 900px;
+            margin: 30px auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+        }
+
+        .header {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+        }
+
+        .header img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        .name-title h1 {
+            margin: 0;
+            font-size: 1.8rem;
+            letter-spacing: 0.05em;
+        }
+
+        .name-title p {
+            margin: 4px 0;
+            color: #555;
+        }
+
+        .two-column {
+            display: flex;
+            gap: 30px;
+            margin-top: 10px;
+        }
+
+        .sidebar {
+            width: 25%;
+            border-right: 1px solid #eee;
+            padding-right: 15px;
+            font-size: 0.95rem;
+        }
+
+        .sidebar a {
+            display: block;
+            margin-bottom: 8px;
+            color: #111;
+            text-decoration: none;
+        }
+
+        .sidebar a:hover {
+            text-decoration: underline;
+        }
+
+        .mainbody {
+            width: 75%;
+            font-size: 0.98rem;
+        }
+
+        .section-title {
+            font-weight: 600;
+            margin-bottom: 6px;
+        }
+
+        ol {
+            padding-left: 18px;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        ul {
+            margin-top: 5px;
+        }
+
+        .company-link {
+            margin-top: 10px;
+            font-size: 0.9rem;
+        }
+
+        .company-link a {
+            color: #000;
+        }
+
+        .back-to-top {
+            margin-top: 15px;
+            font-size: 0.9rem;
+        }
+
+        .back-to-top a {
+            color: #000;
+            text-decoration: none;
+        }
+
+        .back-to-top a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .two-column {
+                flex-direction: column;
+            }
+
+            .sidebar,
+            .mainbody {
+                width: 100%;
+                border-right: none;
+                padding-right: 0;
+            }
+        }
+    </style>
 </head>
 <body id="top">
 
-<nav>
 <nav>
     <a href="index.html">Home</a> |
     <a href="resume.html">Resume</a> |
@@ -17,53 +170,70 @@
     <a href="scratch.html">Scratch Page</a> |
     <a href="webapp.html">Web App</a>
 </nav>
-</nav>
 
-<div class="leftvalue">
-    <a href="#edu">Education</a><br>
-    <a href="#exp">Experience</a><br>
-    <a href="#ski">Skills</a>
-</div>
+<div class="page-wrapper">
 
-<img src="images/B167.JPG" height="150" alt="Austin Birchall Professional Image">
-<h2>Austin Birchall</h2>
+    <div class="header">
+        <img src="images/B167.JPG" alt="Austin Birchall Professional Image">
+        <div class="name-title">
+            <h1>AUSTIN BIRCHALL</h1>
+            <p>Life Insurance Agent &nbsp;•&nbsp; Founders Financial Group</p>
+            <p>Orem, UT 84097</p>
+            <p>Mission: Helping families secure the protection they need.</p>
+        </div>
+    </div>
 
-<p>
-Life Insurance Agent <br>
-Founders Financial Group <br>
-Orem, UT 84097 <br>
-Mission: Helping families secure the protection they need.
-</p>
+    <div class="two-column">
+        <!-- Sidebar -->
+        <aside class="sidebar">
+            <div class="section-title">Sections</div>
+            <a href="#edu">Education</a>
+            <a href="#exp">Experience</a>
+            <a href="#ski">Skills</a>
 
-<div class="rightvalue">
-    <p>See my <a href="https://www.foundersfinancialgroup.com/" target="_blank">company page.</a></p>
-</div>
+            <div class="company-link">
+                See my
+                <a href="https://www.foundersfinancialgroup.com/" target="_blank">
+                    company page
+                </a>.
+            </div>
+        </aside>
 
-<div class="mainbody">
-    <ol>
-        <li id="edu">Education
-            <ul>
-                <li>Brigham Young University (current)</li>
-            </ul>
-        </li>
+        <!-- Main content -->
+        <main class="mainbody">
+            <ol>
+                <li id="edu">
+                    <span class="section-title">Education</span>
+                    <ul>
+                        <li>Brigham Young University (current)</li>
+                    </ul>
+                </li>
 
-        <li id="exp">Experience
-            <ul>
-                <li>Financial Representative Intern — Northwestern Mutual (2025)</li>
-                <li>Life Insurance Producer — Founders Financial Group (2025–Present)</li>
-            </ul>
-        </li>
+                <li id="exp">
+                    <span class="section-title">Experience</span>
+                    <ul>
+                        <li>Financial Representative Intern — Northwestern Mutual (2025)</li>
+                        <li>Life Insurance Producer — Founders Financial Group (2025–Present)</li>
+                    </ul>
+                </li>
 
-        <li id="ski">Skills
-            <ul>
-                <li>Client-facing communication</li>
-                <li>Direct sales</li>
-                <li>Cold-client closing</li>
-                <li>SDR / AE experience</li>
-            </ul>
-            <a href="#top">Back to Top</a>
-        </li>
-    </ol>
+                <li id="ski">
+                    <span class="section-title">Skills</span>
+                    <ul>
+                        <li>Client-facing communication</li>
+                        <li>Direct sales</li>
+                        <li>Cold-client closing</li>
+                        <li>SDR / AE experience</li>
+                    </ul>
+                </li>
+            </ol>
+
+            <div class="back-to-top">
+                <a href="#top">Back to Top</a>
+            </div>
+        </main>
+    </div>
+
 </div>
 
 </body>
