--- a/webapp.html
+++ b/webapp.html
@@ -50,10 +50,10 @@
 
 <div class="app-container">
     <label>Enter Your Age:</label>
-    <input type="number" id="age" placeholder="e.g., 30">
+    <input type="number" id="age">
 
     <label>Desired Coverage Amount ($):</label>
-    <input type="number" id="coverage" placeholder="e.g., 250000">
+    <input type="number" id="coverage">
 
     <button onclick="estimatePremium()">Calculate Estimate</button>
 
