--- a/scratch.html
+++ b/scratch.html
@@ -56,9 +56,9 @@
 
 <!-- REQUIRED: YOUTUBE VIDEO -->
 <h2>YouTube Video Example</h2>
-<p>A motivating video I enjoy:</p>
+<p>This is my all time favorite music video:</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+<iframe width="560" height="315" src="https://youtu.be/d33C8IE7WnQ?si=Xe4iwdqrJm2_5FGL"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
