--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </nav>
 
     <h1>Welcome to My Website</h1>
-    <p>This site includes my professional résumé, a personal About Me page, and additional project content.</p>
+    <p>This site includes my professional resume, a personal About Me page, and additional project content. 
+        I'm very grateful for this class and the skills it has taught, and for professor Cutler and the TA's that have been very helpful.
+        God bless you all as you enjoy this half decent website.</p>
 </body>
 </html>
