--- a/scratch.html
+++ b/scratch.html
@@ -65,6 +65,43 @@
 
 <hr>
 
+    <h2>My Tableau Visualization</h2>
+
+<div class='tableauPlaceholder' id='tableauViz'>
+    <noscript>
+        <a href='#'>
+            <img alt='Tableau Graph Placeholder'
+                 src='https://public.tableau.com/static/images/WO/WorldIndicators_15948265192810/WorldIndicators/1.png'
+                 style='border: none;' />
+        </a>
+    </noscript>
+    <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='WO/WorldIndicators_15948265192810/WorldIndicators' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' 
+               value='https://public.tableau.com/static/images/WO/WorldIndicators_15948265192810/WorldIndicators/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+    </object>
+</div>
+
+<script type='text/javascript'>
+    var divElement = document.getElementById('tableauViz');
+    var vizElement = divElement.getElementsByTagName('object')[0];
+    vizElement.style.width = '100%';
+    vizElement.style.height = '600px';
+    var scriptElement = document.createElement('script');
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
+
 <!-- REQUIRED: ON-PAGE ANCHOR -->
 <h2>Jump Links</h2>
 <p><a href="#top">Back to Top</a></p>
