--- a/scratch.html
+++ b/scratch.html
@@ -65,25 +65,26 @@
 
 <hr>
 
-    <h2>My Tableau Visualization</h2>
+   <h2>Interactive Tableau Graph</h2>
 
-<div class='tableauPlaceholder' id='tableauViz'>
+<div class='tableauPlaceholder' id='viz17123456789' style='position: relative'>
     <noscript>
         <a href='#'>
-            <img alt='Tableau Graph Placeholder'
-                 src='https://public.tableau.com/static/images/WO/WorldIndicators_15948265192810/WorldIndicators/1.png'
-                 style='border: none;' />
+            <img alt='Tableau Placeholder'
+                src='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png'
+                style='border: none;' />
         </a>
     </noscript>
-    <object class='tableauViz' style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+
+    <object class='tableauViz' style='display: none;'>
+        <param name='host_url' value='https://public.tableau.com/' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
-        <param name='name' value='WO/WorldIndicators_15948265192810/WorldIndicators' />
+        <param name='name' value='RegionalSampleWorkbook/Obesity' />
         <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
-        <param name='static_image' 
-               value='https://public.tableau.com/static/images/WO/WorldIndicators_15948265192810/WorldIndicators/1.png' />
+        <param name='static_image'
+            value='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
@@ -93,10 +94,11 @@
 </div>
 
 <script type='text/javascript'>
-    var divElement = document.getElementById('tableauViz');
+    var divElement = document.getElementById('viz17123456789');
     var vizElement = divElement.getElementsByTagName('object')[0];
     vizElement.style.width = '100%';
     vizElement.style.height = '600px';
+
     var scriptElement = document.createElement('script');
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
