--- a/scratch.html
+++ b/scratch.html
@@ -4,109 +4,217 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scratch Page - Austin Birchall</title>
+
+    <!-- Custom stylesheet required by the project -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- A tiny bit of extra page-specific styling -->
+    <style>
+        .scratch-wrapper {
+            max-width: 1000px;
+            margin: 20px auto;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px 25px;
+            border-radius: 8px;
+        }
+
+        .scratch-header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .scratch-header h1 {
+            margin-bottom: 5px;
+        }
+
+        .scratch-section {
+            margin-bottom: 30px;
+        }
+
+        .scratch-section h2 {
+            margin-bottom: 8px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 4px;
+        }
+
+        .scratch-image {
+            text-align: center;
+        }
+
+        .scratch-image img {
+            max-width: 220px;
+            border-radius: 8px;
+        }
+
+        /* Make sure links look clean on this page */
+        a {
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
+<body id="top">
 
-<body>
-
-<!-- NAVIGATION -->
+<!-- NAVIGATION to all major pages -->
 <nav>
     <a href="index.html">Home</a> |
     <a href="resume.html">Resume</a> |
     <a href="aboutme.html">About Me</a> |
     <a href="bootstrap.html">Bootstrap Page</a> |
-    <a href="webapp.html">Web App</a> |
-    <a href="scratch.html">Scratch Page</a>
+    <a href="scratch.html">Scratch Page</a> |
+    <a href="webapp.html">Web App</a>
 </nav>
 
-<h1 id="top">From-Scratch HTML Page</h1>
-<p>This page demonstrates all required HTML elements built completely from scratch.</p>
+<!-- Use the three divs that are styled in styles.css: leftvalue, mainbody, rightvalue -->
+<div class="leftvalue">
+    <h3>Quick Links</h3>
+    <a href="#hobby">Hobby</a><br>
+    <a href="#lists">Lists</a><br>
+    <a href="#video">YouTube Video</a><br>
+    <a href="#tableau">Tableau Viz</a><br>
+    <a href="#top">Back to Top</a><br><br>
 
-<hr>
-
-<!-- REQUIRED: Background (handled by styles.css) -->
-
-<!-- REQUIRED: IMAGE -->
-<h2>An Image I Added Myself</h2>
-<img src="images/B167.JPG" alt="Austin Birchall" width="200">
-
-<hr>
-
-<!-- REQUIRED: ORDERED + UNORDERED LIST -->
-<h2>Example of Lists</h2>
-<ol>
-    <li>My Professional Skills
-        <ul>
-            <li>Client Communication</li>
-            <li>Insurance Planning</li>
-            <li>Sales & Consultations</li>
-        </ul>
-    </li>
-
-    <li>My Interests
-        <ul>
-            <li>Endurance Sports</li>
-            <li>Skiing</li>
-            <li>Family Activities</li>
-        </ul>
-    </li>
-</ol>
-
-<hr>
-
-<!-- REQUIRED: YOUTUBE VIDEO -->
-<h2>YouTube Video Example</h2>
-<p>This is my all time favorite music video:</p>
-
-<iframe width="560" height="315" src="https://youtu.be/d33C8IE7WnQ?si=Xe4iwdqrJm2_5FGL"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>
-
-<hr>
-
-   <h2>Interactive Tableau Graph</h2>
-
-<div class='tableauPlaceholder' id='viz17123456789' style='position: relative'>
-    <noscript>
-        <a href='#'>
-            <img alt='Tableau Placeholder'
-                src='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png'
-                style='border: none;' />
-        </a>
-    </noscript>
-
-    <object class='tableauViz' style='display: none;'>
-        <param name='host_url' value='https://public.tableau.com/' />
-        <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='RegionalSampleWorkbook/Obesity' />
-        <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image'
-            value='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png' />
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-    </object>
+    <!-- Required: link from scratch page to web app -->
+    <strong>Web App:</strong><br>
+    <a href="webapp.html">Insurance Premium Estimator</a>
 </div>
 
-<script type='text/javascript'>
-    var divElement = document.getElementById('viz17123456789');
-    var vizElement = divElement.getElementsByTagName('object')[0];
-    vizElement.style.width = '100%';
-    vizElement.style.height = '600px';
+<div class="rightvalue">
+    <h3>On This Page</h3>
+    <p>This page was built from scratch to demonstrate:</p>
+    <ul>
+        <li>Custom CSS from <code>styles.css</code></li>
+        <li>Background image or color</li>
+        <li>Nested lists</li>
+        <li>Embedded YouTube</li>
+        <li>Interactive Tableau</li>
+        <li>On-page anchors</li>
+    </ul>
+</div>
 
-    var scriptElement = document.createElement('script');
-    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-</script>
+<div class="mainbody">
+    <div class="scratch-wrapper">
 
-<!-- REQUIRED: ON-PAGE ANCHOR -->
-<h2>Jump Links</h2>
-<p><a href="#top">Back to Top</a></p>
+        <!-- HEADER -->
+        <header class="scratch-header">
+            <h1>From-Scratch HTML &amp; CSS Page</h1>
+            <p>A page about my interests and tools, built completely from a blank HTML file.</p>
+        </header>
+
+        <!-- HOBBY / PASSION SECTION -->
+        <section id="hobby" class="scratch-section">
+            <h2>Endurance, Skiing, and Service</h2>
+            <p>
+                I love pushing myself through endurance sports, spending time skiing in the mountains,
+                and serving people through my work and community. These three areas keep me motivated
+                and balanced.
+            </p>
+        </section>
+
+        <!-- IMAGE SECTION (non-Bootstrap image) -->
+        <section class="scratch-section scratch-image">
+            <h2>My Own Image</h2>
+            <p>This image is hosted in my own project, not from a Bootstrap theme.</p>
+            <img src="images/B167.JPG" alt="Austin Birchall">
+        </section>
+
+        <!-- ORDERED LIST WITH NESTED UNORDERED LIST -->
+        <section id="lists" class="scratch-section">
+            <h2>Goals and Interests (Nested Lists)</h2>
+            <p>Here is an ordered list with unordered lists inside it (required by the project):</p>
+
+            <ol>
+                <li>Health &amp; Fitness
+                    <ul>
+                        <li>Run longer distances</li>
+                        <li>Improve overall strength</li>
+                        <li>Stay consistent with training</li>
+                    </ul>
+                </li>
+                <li>Career &amp; Skills
+                    <ul>
+                        <li>Develop stronger sales and communication skills</li>
+                        <li>Learn more about financial planning tools</li>
+                        <li>Continue improving my web and tech skills</li>
+                    </ul>
+                </li>
+                <li>Family &amp; Faith
+                    <ul>
+                        <li>Be present with my family</li>
+                        <li>Look for opportunities to serve</li>
+                        <li>Stay grounded in my values</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+
+        <!-- YOUTUBE EMBED -->
+        <section id="video" class="scratch-section">
+            <h2>Favorite YouTube Video</h2>
+            <p>Here is a YouTube video I enjoy watching:</p>
+
+            <!-- Replace VIDEO_ID with your real YouTube video ID -->
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </section>
+
+        <!-- TABLEAU EMBED -->
+        <section id="tableau" class="scratch-section">
+            <h2>Interactive Tableau Graph</h2>
+            <p>Below is an interactive Tableau visualization embedded on this page.</p>
+
+            <div class='tableauPlaceholder' id='viz17123456789' style='position: relative'>
+                <noscript>
+                    <a href='#'>
+                        <img alt='Tableau Placeholder'
+                            src='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png'
+                            style='border: none;' />
+                    </a>
+                </noscript>
+
+                <object class='tableauViz' style='display: none;'>
+                    <param name='host_url' value='https://public.tableau.com/' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='RegionalSampleWorkbook/Obesity' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https://public.tableau.com/static/images/Re/RegionalSampleWorkbook/Obesity/1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                </object>
+            </div>
+
+            <script type='text/javascript'>
+                var divElement = document.getElementById('viz17123456789');
+                var vizElement = divElement.getElementsByTagName('object')[0];
+                vizElement.style.width = '100%';
+                vizElement.style.height = '600px';
+
+                var scriptElement = document.createElement('script');
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);
+            </script>
+        </section>
+
+        <!-- BACK TO TOP ANCHOR -->
+        <section class="scratch-section">
+            <p><a href="#top">Back to Top</a></p>
+        </section>
+    </div>
+</div>
 
 </body>
 </html>
