--- a/scratch.html
+++ b/scratch.html
@@ -116,9 +116,8 @@
     <a href="#top">Back to Top</a>
 </div>
 
-<!-- RIGHT SIDE NOTES (div for CSS credit) -->
 <div class="rightvalue">
-    <strong>Requirements Shown:</strong>
+    <strong>Requirements: </strong>
     <ul>
         <li>Custom CSS</li>
         <li>Nested Lists</li>
