--- a/bootstrap.html
+++ b/bootstrap.html
@@ -3,112 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Birchall - Professional Page</title>
+    <title>Professional Bootstrap Page - Austin Birchall</title>
 
-    <!-- BOOTSTRAP CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet">
+
+    <!-- Optional: keep same feel as resume -->
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        }
+        .content-card {
+            background: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+            margin-top: 30px;
+        }
+        .section-title {
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 6px;
+            margin-bottom: 15px;
+            font-weight: 600;
+        }
+        .footer-text {
+            text-align: center;
+            margin-top: 40px;
+            color: #777;
+        }
+    </style>
 </head>
-
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
         <a class="navbar-brand" href="index.html">Austin Birchall</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ms-auto">
-<nav>
-    <a href="index.html">Home</a> |
-    <a href="resume.html">Resume</a> |
-    <a href="aboutme.html">About Me</a> |
-    <a href="bootstrap.html">Bootstrap Page</a> |
-    <a href="scratch.html">Scratch Page</a> |
-    <a href="webapp.html">Web App</a>
-</nav>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutme.html">About Me</a></li>
                 <li class="nav-item"><a class="nav-link active" href="bootstrap.html">Bootstrap Page</a></li>
+                <li class="nav-item"><a class="nav-link" href="scratch.html">Scratch Page</a></li>
+                <li class="nav-item"><a class="nav-link" href="webapp.html">Web App</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!-- HERO SECTION -->
-<section class="bg-light text-dark py-5">
-    <div class="container text-center">
-        <img src="images/B167.JPG" class="rounded-circle mb-3" width="150" alt="Profile">
-        <h1 class="fw-bold">Welcome to My Professional Page</h1>
-        <p class="lead">Life Insurance Producer • Client-Focused • BYU Student</p>
-    </div>
-</section>
+<!-- MAIN CONTENT -->
+<div class="container">
+    <div class="content-card">
+        <h1 class="text-center mb-4">Professional Page (Bootstrap)</h1>
 
-<!-- ABOUT SECTION -->
-<section class="container py-5">
-    <div class="row align-items-center">
-        <div class="col-md-6">
-            <h2 class="fw-bold">About My Work</h2>
-            <p>
-                I am a Licensed Insurance Producer working with families across the United States.
-                I help clients find solutions that provide long-term protection and financial security.
-            </p>
-            <p>
-                Relationship-building is at the heart of my work, and I strive to bring clarity,
-                professionalism, and honest care to every client interaction.
-            </p>
-        </div>
+        <p class="lead text-center">
+            This page demonstrates my ability to use Bootstrap to create clean, modern, responsive layouts.
+        </p>
 
-        <div class="col-md-6">
-            <img src="images/B167.JPG" class="img-fluid rounded shadow" alt="Austin Birchall">
-        </div>
-    </div>
-</section>
+        <hr>
 
-<!-- SKILLS CARDS -->
-<section class="bg-primary text-white py-5">
-    <div class="container">
-        <h2 class="text-center mb-4">My Core Skills</h2>
+        <!-- CORE SECTIONS -->
+        <div class="section-title">My Professional Strengths</div>
 
         <div class="row g-4">
+
+            <!-- CARD 1 -->
             <div class="col-md-4">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Client Communication</h5>
-                        <p class="card-text">Building strong, trusting relationships with every client I serve.</p>
+                        <h5 class="card-title">Sales & Communication</h5>
+                        <p class="card-text">
+                            I thrive in client-facing roles where clarity, trust, and strong interpersonal skills matter.
+                        </p>
                     </div>
                 </div>
             </div>
 
+            <!-- CARD 2 -->
             <div class="col-md-4">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Life Insurance Planning</h5>
-                        <p class="card-text">Presenting and customizing solutions tailored to each family's needs.</p>
+                        <h5 class="card-title">Financial Services</h5>
+                        <p class="card-text">
+                            I assist families in understanding and choosing the right life insurance options to secure their future.
+                        </p>
                     </div>
                 </div>
             </div>
 
+            <!-- CARD 3 -->
             <div class="col-md-4">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Endurance & Drive</h5>
-                        <p class="card-text">Athletic focus and work ethic help me excel in fast-paced environments.</p>
+                        <h5 class="card-title">Professional Growth</h5>
+                        <p class="card-text">
+                            I am dedicated to improving my skills and expanding my expertise through ongoing learning and real experience.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+
+        <hr class="my-4">
+
+        <!-- BENEFITS SECTION -->
+        <div class="section-title">What I’m Working Toward</div>
+
+        <ul class="list-group mb-4">
+            <li class="list-group-item">Becoming a trusted financial professional</li>
+            <li class="list-group-item">Building long-term client relationships</li>
+            <li class="list-group-item">Mastering insurance solutions & planning tools</li>
+        </ul>
+
+        <p class="footer-text">Built with Bootstrap — Responsive & Modern</p>
+
     </div>
-</section>
+</div>
 
-<!-- FOOTER -->
-<footer class="bg-dark text-center text-white py-3">
-    <p>© 2025 Austin Birchall — Professional Portfolio</p>
-</footer>
+<!-- Bootstrap JS -->
+<script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
+</script>
 
-<!-- BOOTSTRAP JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
 </body>
 </html>
