--- a/bootstrap.html
+++ b/bootstrap.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet">
 
-    <!-- Optional: keep same feel as resume -->
+
     <style>
         body {
             background-color: #f5f5f5;
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
+<!-- nav -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="index.html">Austin Birchall</a>
@@ -60,14 +60,10 @@
     </div>
 </nav>
 
-<!-- MAIN CONTENT -->
+<!-- MAIN PART -->
 <div class="container">
     <div class="content-card">
         <h1 class="text-center mb-4">Professional Page (Bootstrap)</h1>
-
-        <p class="lead text-center">
-            This page demonstrates my ability to use Bootstrap to create clean, modern, responsive layouts.
-        </p>
 
         <hr>
 
@@ -76,7 +72,7 @@
 
         <div class="row g-4">
 
-            <!-- CARD 1 -->
+   
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
@@ -88,7 +84,7 @@
                 </div>
             </div>
 
-            <!-- CARD 2 -->
+
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
@@ -100,7 +96,7 @@
                 </div>
             </div>
 
-            <!-- CARD 3 -->
+
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
@@ -115,21 +111,22 @@
 
         <hr class="my-4">
 
-        <!-- BENEFITS SECTION -->
+
         <div class="section-title">What I’m Working Toward</div>
 
         <ul class="list-group mb-4">
             <li class="list-group-item">Becoming a trusted financial professional</li>
             <li class="list-group-item">Building long-term client relationships</li>
             <li class="list-group-item">Mastering insurance solutions & planning tools</li>
+            <li class="list-group-item">Submitting $100k premium monthly</li>
         </ul>
 
-        <p class="footer-text">Built with Bootstrap — Responsive & Modern</p>
+        <p class="footer-text">Built with Bootstrap — (hopefully) Responsive & Modern</p>
 
     </div>
 </div>
 
-<!-- Bootstrap JS -->
+
 <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
 </script>
