--- a/webapp.html
+++ b/webapp.html
@@ -66,7 +66,7 @@ function estimatePremium() {
     let coverage = Number(document.getElementById("coverage").value);
 
     if (age <= 0 || coverage <= 0) {
-        document.getElementById("result").innerText = "Please enter valid numbers.";
+        document.getElementById("result").innerText = "Why didn't you enter any numbers...";
         return;
     }
 
