--- a/resume.html
+++ b/resume.html
@@ -174,7 +174,7 @@
 <div class="page-wrapper">
 
     <div class="header">
-        <img src="images/B167.JPG" alt="Austin Birchall Professional Image">
+        <img src="image/B167.JPG" alt="Austin Birchall Professional Image">
         <div class="name-title">
             <h1>AUSTIN BIRCHALL</h1>
             <p>Life Insurance Agent &nbsp;•&nbsp; Founders Financial Group</p>
