--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
 
 <div class="container">
 
-    <img src="images/B167.JPG" alt="Profile Photo" class="profile-pic">
+    <img src="image/DSC06236.jpeg" alt="Profile Photo" class="profile-pic">
 
     <h2>About Me</h2>
     <p>Hi! My name is Austin. I'm a Licensed Insurance Producer throughout the United States based in Utah.</p>
