--- a/scratch.html
+++ b/scratch.html
@@ -154,7 +154,7 @@
         </section>
 
         <section class="section scratch-image">
-            <h2>My Image (Non-Bootstrap)</h2>
+            <h2>My Image</h2>
             <img src="images/B167.JPG" alt="Austin Birchall">
         </section>
 
