--- a/scratch.html
+++ b/scratch.html
@@ -155,7 +155,7 @@
 
         <section class="section scratch-image">
             <h2>My Image</h2>
-            <img src="images/IMG_2737.JPG" alt="Austin Birchall">
+            <img src="image/IMG_2737.JPG" alt="Austin Birchall">
         </section>
 
         <section id="lists" class="section">
