--- a/scratch.html
+++ b/scratch.html
@@ -142,8 +142,7 @@
 <div class="mainbody">
     <div class="scratch-container">
 
-        <h1>From-Scratch HTML & CSS Page</h1>
-        <p>This page demonstrates hand-written HTML, CSS, and embedding tools.</p>
+        <p>Dmonstrating hand-written HTML, CSS, and embedding tools.</p>
 
         <section id="hobby" class="section">
             <h2>Hobby & Interests</h2>
